--- a/config.toml
+++ b/config.toml
@@ -19,6 +19,8 @@ taxonomies = [
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
 highlight_code = true
 
+render_emoji = true
+
 [extra]
 # Put all your custom variables here
 theme_color = "orange"
@@ -35,7 +37,7 @@ read_more = "read more"
 
 show_menu_items = 3
 main_menu = [
-  {url="/about/", name="about"},
-  {url="/contact/", name="contact"},
+  {url="/about//", name="about"},
+  {url="/contact//", name="contact"},
   {url="https://github.com/q60", name="GitHub", external=true},
 ]
