Add new blog post

--- a/config.toml
+++ b/config.toml
@@ -31,6 +31,8 @@ show_categories = true
 show_tags = true
 read_more = "read more"
 
+enable_katex = true
+
 show_menu_items = 3
 main_menu = [
   {url="/about//", name="about"},
